<!--
  Copyright (c) 2014 Kinvey Inc.
  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at
  
  http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ghost_white"
    android:orientation="vertical">
    <FrameLayout android:id="@+id/my_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView android:text="@string/appdata_aggregate_description"
                    style="@style/usecase_description"/>

                <LinearLayout android:layout_width="match_parent" android:layout_height="2dp"
                    android:background="@color/kinvey_orange"/>

                <LinearLayout style="@style/usecase_row">
                    <TextView android:text="@string/aggregate_perform_count_text"
                        style="@style/usecase_row_label"/>
                    <Button android:id="@+id/aggCountBtn"
                        android:text="@string/aggregate_count_text"
                        style="@style/usecase_action_button"/>
                </LinearLayout>

                <LinearLayout style="@style/usecase_row">
                    <TextView android:text="@string/aggregate_perform_sum_text"
                        style="@style/usecase_row_label"/>
                    <Button android:id="@+id/aggSumBtn"
                        android:text="@string/aggregate_sum_text"
                        style="@style/usecase_action_button"/>
                </LinearLayout>

                <LinearLayout style="@style/usecase_row">
                    <TextView android:text="@string/aggregate_perform_min_text"
                        style="@style/usecase_row_label"/>
                    <Button android:id="@+id/aggMinBtn"
                        android:text="@string/aggregate_min_text"
                        style="@style/usecase_action_button"/>
                </LinearLayout>

                <LinearLayout style="@style/usecase_row">
                    <TextView android:text="@string/aggregate_perform_max_text"
                        style="@style/usecase_row_label"/>

                    <Button android:id="@+id/aggMaxBtn"
                        android:text="@string/aggregate_max_text"
                        style="@style/usecase_action_button"/>
                </LinearLayout>

                <LinearLayout style="@style/usecase_row">
                    <TextView android:text="@string/aggregate_perform_average_text"
                        style="@style/usecase_row_label"/>
                    <Button android:id="@+id/aggAverageBtn"
                        android:text="@string/aggregate_average_text"
                        style="@style/usecase_action_button"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>













