<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014 Kinvey Inc.
  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at
  
  http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ghost_white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView android:id="@+id/loginLabelUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RobotoThinText"
                android:textSize="24sp"
                android:text="@string/login_username"/>

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RobotoThinText"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/et_password"/>

            <TextView android:id="@+id/loginLabelPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RobotoThinText"
                android:textSize="24sp"
                android:paddingTop="10dp"
                android:text="@string/login_password"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RobotoThinText"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:typeface="monospace"/>

            <TextView android:id="@+id/loginLabelImplicit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RobotoThinText"
                android:textSize="24sp"
                android:paddingTop="10dp"
                android:text="(or) implicit login"/>

            <CheckBox android:id="@+id/loginAnonCheckbox"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginBtn"
                style="@style/RobotoThinText"
                android:layout_margin="10dp"
                android:onClick="submit"
                android:text="@string/feature_login" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>